--- a/assets/style.css
+++ b/assets/style.css
@@ -88,7 +88,7 @@ body {
 }
 .btn {
   padding: 10px 20px;
-  margin-right: 50px;
+  margin-left: 260px;
   background-color: #27ae60;
   border: none;
   border-radius: 10px;
@@ -96,27 +96,40 @@ body {
   display: inline-block;
   cursor: pointer;
 }
-
-.btn a {
+.btn-register{
+  padding: 10px 20px;
+  margin-right: 150px;
+  background-color: #27ae60;
+  border: none;
+  border-radius: 10px;
+  transition: background-color 0.3s ease, transform 0.1s ease;
+  display: inline-block;
+  cursor: pointer;
+}
+.btn a,
+.btn-register a {
   text-decoration: none;
   color: black;
   transition: color 0.3s ease;
-  display: block;
+  display: block; 
   padding: 0;
   line-height: 1.2;
 }
 
-.btn:hover {
+.btn:hover,
+.btn-register:hover {
   background-color: #219150;
   transform: translateY(-2px);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.btn:hover a {
+.btn:hover a,
+.btn-register:hover a {
   color: white;
 }
 
-.btn:active {
+.btn:active,
+.btn-register:active {
   transform: translateY(0);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -442,22 +455,22 @@ p {
 }
 
 .product-detail {
-  display: flex;
-  flex-direction: row;
-  gap: 60px;
-  align-items: flex-start;
+  display: grid;
+  grid-template-columns: 60% 40%;
+  gap: 40px;
+  /* align-items: flex-start; */
   margin-top: 30px;
 }
 
-.product-detail-image {
-  flex: 1;
-  min-width: 300px;
+.product-gallery {
+  display: grid;
+  grid-template-columns: 100px 1fr;
+  gap: 10px;
   border-radius: 10px;
-  overflow: hidden;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
 }
 
-.product-detail-image img {
+.product-gallery img {
   width: 100%;
   height: auto;
   max-height: 600px;
@@ -466,16 +479,57 @@ p {
   transition: transform 0.3s ease;
 }
 
-.product-detail-image img:hover {
+.product-gallery img:hover {
   transform: scale(1.05);
 }
 
+.thumbnail {
+  max-height: 450px;
+  overflow-y: auto;
+  direction: rtl;
+  scrollbar-width: none; /* Hides the scrollbar */
+  scrollbar-color: transparent transparent; /* Optional: Makes the thumb and track transparent */
+}
+.thumbnail img {
+  width: 80px;
+  height: 100px;
+}
+
+.main-product img {
+  width: 100%;
+  height: 450px;
+}
+.related {
+  margin-top: 30px;
+}
+
+.related h3 {
+  font-family: "Times New Roman", Times, serif;
+  border-left: 5px solid red;
+  padding-left: 15px;
+}
+.related p {
+  font-family: "Times New Roman", Times, serif;
+}
+
+.related-grid {
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+}
+
+.related-card img {
+  width: 100%;
+  height: 200px;
+}
 .product-info {
   flex: 1.2;
   padding: 20px 0;
 }
 
 .product-info h2 {
+  font-family: "Times New Roman", Times, serif;
   font-size: 36px;
   font-weight: 700;
   color: #333;
@@ -491,6 +545,7 @@ p {
   font-weight: 600;
   margin-bottom: 25px;
   padding: 0px 30px;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .product-desc {
@@ -503,6 +558,7 @@ p {
   padding-bottom: 15px;
   border-bottom: 1px solid #eee;
   padding: 0px 30px;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .quantity {
@@ -659,14 +715,13 @@ p {
   display: flex;
   justify-content: space-between;
   gap: 10px;
-
 }
-.two-column-container input{
-     font-size: 0.9rem;
-     padding: 1rem 1.7rem; 
+.two-column-container input {
+  font-size: 0.9rem;
+  padding: 1rem 1.7rem;
 }
 .two-column-container > div {
-    flex: 1; /* Makes each column take 50% width */
+  flex: 1; /* Makes each column take 50% width */
 }
 
 .forgot {
@@ -691,7 +746,7 @@ p {
   align-items: center;
   justify-content: center;
   gap: 0.75rem;
-  text-decoration:none;
+  text-decoration: none;
   padding: 1rem 1rem; /* More padding */
   width: 100%;
 
@@ -737,34 +792,33 @@ p {
   text-decoration: underline;
 }
 /* nav-bottom */
-.nav-bottom{
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: #1a1a3a;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 50px;   
-    display: none;
+.nav-bottom {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #1a1a3a;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 50px;
+  display: none;
 }
-.nav-item-bottom{
+.nav-item-bottom {
   color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-decoration: none;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
 }
 
-.active{
-    color: rgb(241, 9, 40);
+.active {
+  color: rgb(241, 9, 40);
 }
 /* laptop */
 @media (max-width: 1200px) {
-
   .product-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -781,9 +835,9 @@ p {
     grid-template-columns: 1fr 1fr;
     gap: 30px;
   }
-   .nav-bottom{
-        display: none;
-    }
+  .nav-bottom {
+    display: none;
+  }
 }
 /* tablet */
 @media (max-width: 992px) {
@@ -800,7 +854,7 @@ p {
     display: none;
   }
   .navbar {
-     background-color: #333;
+    background-color: #333;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -821,17 +875,17 @@ p {
     margin-top: 10px;
     display: none;
   }
-  .menu-icon{
+  .menu-icon {
     display: flex;
     color: white;
-}
-.nav-bottom{
-  display: flex;
-}
-.footer{
-     display: flex;
-     margin-bottom: 50px;
-}
+  }
+  .nav-bottom {
+    display: flex;
+  }
+  .footer {
+    display: flex;
+    margin-bottom: 50px;
+  }
   .product-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -848,7 +902,6 @@ p {
     grid-template-columns: 1fr 1fr;
     gap: 30px;
   }
-
 }
 /* mobile */
 @media (max-width: 768px) {
@@ -862,6 +915,9 @@ p {
     margin-right: 25px;
     font-size: 10px;
     font-family: "Times New Roman", Times, serif;
+    display: none;
+  }
+  .btn-register{
     display: none;
   }
   .navbar {
@@ -878,12 +934,12 @@ p {
     margin-top: 10px;
     display: none;
   }
-  .menu-icon{
-  display: flex;
-}
-.nav-bottom{
-  display: flex;
-}
+  .menu-icon {
+    display: flex;
+  }
+  .nav-bottom {
+    display: flex;
+  }
 
   .product-container {
     display: grid;
@@ -898,23 +954,39 @@ p {
   }
 
   .product-detail-container {
-    width: 90%;
-    max-width: 480px;
+    width: 95%;
+    /* max-width: 480px;
     margin: 40px auto;
-    padding: 20px;
+    padding: 20px; */
   }
 
   .product-detail {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 15px;
-  }
-
-  .product-detail-image {
-    flex: 1;
-    min-width: 100px;
-  }
-
+        grid-template-columns: 1fr;
+    }
+    .product-gallery {
+        grid-template-columns: 1fr;
+    }
+    .main-product{
+        order: 1;
+    }
+    .thumbnail{
+        order: 2;
+        display: flex;
+        gap: 4px;
+        overflow-x: auto;
+        overflow-y: visible;
+        direction: ltr;
+    }
+    .thumbnail img {
+        flex-shrink: 0; 
+        min-width: 80px; 
+        max-width: 80px; 
+        height: 100px;
+    }
+    .related-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
   .product-info {
     flex: 1.2;
     padding: 10px 0;
@@ -1022,7 +1094,6 @@ p {
     white-space: nowrap;
   }
 
-
   .contact-item {
     display: flex;
     align-items: center;
@@ -1048,11 +1119,10 @@ p {
     height: 20px;
   }
 
-
   /* login-register */
   .container {
-  padding: 1.5rem 1rem;
-}
+    padding: 1.5rem 1rem;
+  }
 }
 /* --- VERY SMALL SCREENS (Phones <480px) --- */
 @media (max-width: 480px) {
@@ -1082,12 +1152,12 @@ p {
     margin-top: 10px;
     display: none;
   }
-.menu-icon{
-  display: flex;
-}
-.nav-bottom{
-  display: flex;
-}
+  .menu-icon {
+    display: flex;
+  }
+  .nav-bottom {
+    display: flex;
+  }
   .product-cover {
     padding-right: 20px;
   }
@@ -1275,6 +1345,6 @@ p {
 
   /* login-register */
   .container {
-  padding: 1rem 1rem;
-}
+    padding: 1rem 1rem;
+  }
 }
