--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,9 @@
-/* --- Global Resets & Body --- */
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 body {
